<resources>
    <string name="app_name">Synago</string>
    <string name="app_version">unpublished Development Build</string>

    <string name="title_activity_list">ListActivity</string>
    <string name="input_placeholder">Write a message</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_loginName">Name</string>
    <string name="prompt_HomeSever">Home Server</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_homeserver">Could not contact this Homeserver</string>
    <string name="error_uri_parse">Could not parse URI. Did you use http(s)://</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to NavBar -->
    <string name="general_settings">Settings</string>
    <string name="account_settings">(tmp) Add New Account</string>
    <string name="matrix_contacts">My Matrix Contacts</string>
    <string name="close_app">Close Apps and Service</string>
    <string name="visit_homepage">Product Honepage</string>
    <string name="visit_github">Visit us @GitHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Placeholder Strings -->
    <string name="user_or_room_avatar">Avatar</string>
    <string name="time_or_date">_time</string>


    <!--  Time -->
    <plurals name="format_time_s">
        <item quantity="one">1s</item>
        <item quantity="other">%ds</item>
    </plurals>
    <plurals name="format_time_m">
        <item quantity="one">1m</item>
        <item quantity="other">%dm</item>
    </plurals>
    <plurals name="format_time_h">
        <item quantity="one">1h</item>
        <item quantity="other">%dh</item>
    </plurals>
    <plurals name="format_time_d">
        <item quantity="one">1d</item>
        <item quantity="other">%dd</item>
    </plurals>
</resources>
